# repro_761

./: README.md  pyproject.toml  settings.py
app/: models.py  translation.py
